--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<header id="header">
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-			<h1><strong>I am Ko Ko Aung</strong>, a data analyst<br />
+			<h1><strong>I am Ko Ko Aung</strong>, a data analyst.<br />
 				Transform data into useful information<br />
 				powered by <a href="">Computer science</a>.</h1>
 		</div>
