--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 			<ul class="actions">
 				<li><a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Ko%20Ko%20Aung.pdf" target="_blank" class="button">Download CV</a></li>
 			</ul>
+			<ul class="actions">
+    <li><a href="./Ko_Ko_Aung.pdf" download="Ko_Ko_Aung_CV.pdf" class="button">Download CV</a></li>
+</ul>
 		</section>
 
 		<!-- Two -->
