--- a/index.html
+++ b/index.html
@@ -1,351 +1,224 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animated Travel Website</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Inter', sans-serif;
-      }
-
-      body {
-        background: #fff;
-        color: #1c1c1e;
-        overflow-x: hidden;
-        scroll-behavior: smooth;
-      }
-
-      nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1.5rem 2rem;
-        background: #f8f9fa;
-        position: sticky;
-        top: 0;
-        z-index: 10;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-        animation: fadeInDown 1s ease;
-      }
-
-      .nav__logo {
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: #007bff;
-        cursor: pointer;
-        transition: transform 0.3s ease;
-      }
-
-      .nav__logo:hover {
-        transform: scale(1.05);
-      }
-
-      .nav__links {
-        list-style: none;
-        display: flex;
-        gap: 2rem;
-      }
-
-      .nav__links a {
-        font-weight: 600;
-        color: #333;
-        position: relative;
-      }
-
-      .nav__links a::after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 2px;
-        bottom: -4px;
-        left: 0;
-        background-color: #007bff;
-        transition: width 0.3s ease;
-      }
-
-      .nav__links a:hover::after {
-        width: 100%;
-      }
-
-      .btn {
-        background: #007bff;
-        color: #fff;
-        border: none;
-        padding: 0.75rem 1.5rem;
-        border-radius: 25px;
-        cursor: pointer;
-        font-weight: 600;
-        box-shadow: 0 8px 24px rgba(0, 123, 255, 0.2);
-        transition: transform 0.3s ease, background 0.3s ease;
-      }
-
-      .btn:hover {
-        transform: translateY(-2px);
-        background: #0056b3;
-      }
-
-      header {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
-        padding: 4rem 2rem;
-        background: linear-gradient(to right, #e3f2fd, #fff);
-        animation: fadeIn 1s ease-in-out;
-      }
-
-      header h1 {
-        font-size: 3rem;
-        margin: 1rem 0;
-      }
-
-      header p {
-        font-size: 1.1rem;
-        color: #555;
-        max-width: 600px;
-        margin: 0 auto 2rem;
-      }
-
-      .action__btns {
-        display: flex;
-        gap: 1.5rem;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-      }
-
-      .story {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        cursor: pointer;
-        font-weight: 600;
-        color: #007bff;
-      }
-
-      .video__image {
-        position: relative;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      }
-
-      .video__image img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-      .video__image span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        font-size: 1.5rem;
-      }
-
-      section {
-        padding: 4rem 2rem;
-        animation: fadeIn 1.2s ease;
-      }
-
-      .section__title {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        text-align: center;
-      }
-
-      .section__subtitle {
-        font-size: 1rem;
-        color: #666;
-        text-align: center;
-        max-width: 600px;
-        margin: 0 auto 2rem;
-      }
-
-      .destination__grid,
-      .trip__grid {
-        display: grid;
-        gap: 2rem;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        padding: 2rem 0;
-      }
-
-      .destination__card,
-      .trip__card {
-        overflow: hidden;
-        border-radius: 1rem;
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.05);
-        transition: transform 0.3s ease;
-        background: white;
-      }
-
-      .destination__card:hover,
-      .trip__card:hover {
-        transform: translateY(-8px);
-      }
-
-      .destination__card img,
-      .trip__card img {
-        width: 100%;
-        height: 220px;
-        object-fit: cover;
-        transition: transform 0.5s ease;
-      }
-
-      .destination__card:hover img,
-      .trip__card:hover img {
-        transform: scale(1.05);
-      }
-
-      .destination__details,
-      .trip__details {
-        padding: 1rem;
-        text-align: center;
-      }
-
-      footer {
-        background: #f1f1f1;
-        padding: 2rem;
-        text-align: center;
-        font-size: 0.9rem;
-        color: #555;
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      @keyframes fadeInDown {
-        from {
-          opacity: 0;
-          transform: translateY(-20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <nav>
-      <div class="nav__logo">ProCoder09</div>
-      <ul class="nav__links">
-        <li class="link"><a href="#">Home</a></li>
-        <li class="link"><a href="#">Destinations</a></li>
-        <li class="link"><a href="#">Pricing</a></li>
-        <li class="link"><a href="#">Reviews</a></li>
-      </ul>
-      <button class="btn">Contact Us</button>
-    </nav>
-
-    <header>
-      <h1>The Smiling 😊<br />agent for travel</h1>
-      <p>
-        Make your travel more enjoyable with us. We are the best travel agency,
-        providing top travel services.
-      </p>
-      <div class="action__btns">
-        <button class="btn">Plan a Trip</button>
-        <div class="story">
-          <div class="video__image">
-            <img src="story.jpg" alt="story" />
-            <span><i class="ri-play-fill"></i></span>
-          </div>
-          <span>Watch our story</span>
-        </div>
-      </div>
-    </header>
-
-    <section>
-      <h2 class="section__title">Explore top destinations</h2>
-      <p class="section__subtitle">
-        Discover dream places around the world. Find your perfect destination.
-      </p>
-      <div class="destination__grid">
-        <div class="destination__card">
-          <img src="destination-1.jpg" alt="Banff" />
-          <div class="destination__details">
-            <p>Banff</p><p>Canada</p>
-          </div>
-        </div>
-        <div class="destination__card">
-          <img src="destination-2.jpg" alt="Machu Picchu" />
-          <div class="destination__details">
-            <p>Machu Picchu</p><p>Peru</p>
-          </div>
-        </div>
-        <div class="destination__card">
-          <img src="destination-3.jpg" alt="Lauterbrunnen" />
-          <div class="destination__details">
-            <p>Lauterbrunnen</p><p>Switzerland</p>
-          </div>
-        </div>
-        <div class="destination__card">
-          <img src="destination-4.jpg" alt="Zhangjiajie" />
-          <div class="destination__details">
-            <p>Zhangjiajie</p><p>China</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2 class="section__title">Best trip packages</h2>
-      <p class="section__subtitle">
-        Hand-picked experiences at unbeatable prices.
-      </p>
-      <div class="trip__grid">
-        <div class="trip__card">
-          <img src="trip-1.jpg" alt="Germany" />
-          <div class="trip__details">
-            <p>Wasserwerk Frelberg</p>
-            <p>From $300</p>
-          </div>
-        </div>
-        <div class="trip__card">
-          <img src="trip-2.jpg" alt="Patagonia" />
-          <div class="trip__details">
-            <p>Patagonia</p>
-            <p>From $450</p>
-          </div>
-        </div>
-        <div class="trip__card">
-          <img src="trip-3.jpg" alt="Dolomites" />
-          <div class="trip__details">
-            <p>The Dolomites</p>
-            <p>From $400</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer>
-      <p>Copyright © 2025 Code Champion. All rights reserved.</p>
-    </footer>
-  </body>
-</html>
+ <html lang="en">
+   <head>
+     <meta charset="UTF-8" />
+     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link
+       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+       rel="stylesheet"
+     />
+     <link rel="stylesheet" href="styles.css" />
+     <title>Responsive Travel website</title>
+   </head>
+   <body>
+     <nav>
+       <div class="nav__logo">ProCoder09<span></span></div>
+       <ul class="nav__links">
+         <li class="link"><a href="#">Home</a></li>
+         <li class="link"><a href="#">Destinations</a></li>
+         <li class="link"><a href="#">Pricing</a></li>
+         <li class="link"><a href="#">Reviews</a></li>
+       </ul>
+       <button class="btn">Contact Us</button>
+     </nav>
+     <header>
+       <div class="section__container header__container">
+         <div class="header__image">
+           <img src="header-1.jpg" alt="header" />
+           <img src="header-2.jpg" alt="header" />
+         </div>
+         <div class="header__content">
+           <div>
+             <p class="sub__header">Book Now</p>
+             <h1>The Smiling 😊<br />agent for travel</h1>
+             <p class="section__subtitle">
+               Make your travel more enjoyable with us. We are the best travel
+               agency and we are providing the best travel services for our
+               clients.
+             </p>
+             <div class="action__btns">
+               <button class="btn">Plan a Trip</button>
+               <div class="story">
+                 <div class="video__image">
+                   <img src="story.jpg" alt="story" />
+                   <span><i class="ri-play-fill"></i></span>
+                 </div>
+                 <span>Watch our story</span>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </header>
+ 
+     <section class="section__container destination__container">
+       <div class="section__header">
+         <div>
+           <h2 class="section__title">Explore top destinations</h2>
+           <p class="section__subtitle">
+             Explore your suitable and dream places around the world. Here you
+             can find your right destination.
+           </p>
+         </div>
+         <div class="destination__nav">
+           <span><i class="ri-arrow-left-s-line"></i></span>
+           <span><i class="ri-arrow-right-s-line"></i></span>
+         </div>
+       </div>
+       <div class="destination__grid">
+         <div class="destination__card">
+           <img src="destination-1.jpg" alt="destination" />
+           <div class="destination__details">
+             <p class="destination__title">Banff</p>
+             <p class="destination__subtitle">Canada</p>
+           </div>
+         </div>
+         <div class="destination__card">
+           <img src="destination-2.jpg" alt="destination" />
+           <div class="destination__details">
+             <p class="destination__title">Machu Picchu</p>
+             <p class="destination__subtitle">Peru</p>
+           </div>
+         </div>
+         <div class="destination__card">
+           <img src="destination-3.jpg" alt="destination" />
+           <div class="destination__details">
+             <p class="destination__title">Lauterbrunnen</p>
+             <p class="destination__subtitle">Switzerland</p>
+           </div>
+         </div>
+         <div class="destination__card">
+           <img src="destination-4.jpg" alt="destination" />
+           <div class="destination__details">
+             <p class="destination__title">Zhangjiajie</p>
+             <p class="destination__subtitle">China</p>
+           </div>
+         </div>
+       </div>
+     </section>
+ 
+     <section class="trip">
+       <div class="section__container trip__container">
+         <h2 class="section__title">Best trip package</h2>
+         <p class="section__subtitle">
+           Explore your suitable and dream places around the world. Here you can
+           find your right destination.
+         </p>
+         <div class="trip__grid">
+           <div class="trip__card">
+             <img src="trip-1.jpg" alt="trip" />
+             <div class="trip__details">
+               <p>Wasserwerk Frelberg, Germany</p>
+               <div class="rating"><i class="ri-star-fill"></i> 4.2</div>
+               <div class="booking__price">
+                 <div class="price"><span>From</span> $300</div>
+                 <button class="book__now">Book Now</button>
+               </div>
+             </div>
+           </div>
+           <div class="trip__card">
+             <img src="trip-2.jpg" alt="trip" />
+             <div class="trip__details">
+               <p>Patagonia, Argentina and Chile</p>
+               <div class="rating"><i class="ri-star-fill"></i> 4.5</div>
+               <div class="booking__price">
+                 <div class="price"><span>From</span> $450</div>
+                 <button class="book__now">Book Now</button>
+               </div>
+             </div>
+           </div>
+           <div class="trip__card">
+             <img src="trip-3.jpg" alt="trip" />
+             <div class="trip__details">
+               <p>The Dolomites, Italy</p>
+               <div class="rating"><i class="ri-star-fill"></i> 4.7</div>
+               <div class="booking__price">
+                 <div class="price"><span>From</span> $400</div>
+                 <button class="book__now">Book Now</button>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div class="view__all">
+           <button class="btn">View All</button>
+         </div>
+       </div>
+     </section>
+ 
+     <section class="gallary">
+       <div class="section__container gallary__container">
+         <div class="image__gallary">
+           <div class="gallary__col">
+             <img src="gallery-1.jpg" alt="gallary" />
+           </div>
+           <div class="gallary__col">
+             <img src="gallery-2.jpg" alt="gallary" />
+             <img src="gallery-3.jpg" alt="gallary" />
+           </div>
+         </div>
+         <div class="gallary__content">
+           <div>
+             <h2 class="section__title">
+               Our trip gallary that will inspire you
+             </h2>
+             <p class="section__subtitle">
+               Explore your suitable and dream places around the world. Here you
+               can find your right destination.
+             </p>
+             <button class="btn">View All</button>
+           </div>
+         </div>
+       </div>
+     </section>
+ 
+     <section class="subscribe">
+       <div class="section__container subscribe__container">
+         <div class="subscribe__content">
+           <h2 class="section__title">Subscribe to get special prize</h2>
+           <p class="section__subtitle">
+             Explore your suitable and dream places around the world. Here you
+             can find your right destination.
+           </p>
+         </div>
+         <div class="subscribe__form">
+           <form>
+             <input type="email" placeholder="Your email here" />
+             <button class="btn" type="submit">Send</button>
+           </form>
+         </div>
+       </div>
+     </section>
+ 
+     <footer class="footer">
+       <div class="section__container footer__container">
+         <div class="footer__col">
+           <h3>Code Champion<span>.</span></h3>
+           <p>
+             Explore your suitable and dream places around the world. Here you
+             can find your right destination.
+           </p>
+         </div>
+         <div class="footer__col">
+           <h4>Support</h4>
+           <p>FAQs</p>
+           <p>Terms & Conditions</p>
+           <p>Privacy Policy</p>
+           <p>Contact Us</p>
+         </div>
+         <div class="footer__col">
+           <h4>Address</h4>
+           <p>
+             <span>Address:</span> 280 Wilson Street, Cima, California, 92323,
+             United States
+           </p>
+           <p><span>Email:</span> info@Code Champion.com</p>
+           <p><span>Phone:</span> +91 9876543210</p>
+         </div>
+       </div>
+       <div class="footer__bar">
+         Copyright © 2023 Web Design Mastery. All rights reserved.
+       </div>
+     </footer>
+   </body>
+ </html>
