--- a/index.html
+++ b/index.html
@@ -1,224 +1,149 @@
 <!DOCTYPE html>
- <html lang="en">
-   <head>
-     <meta charset="UTF-8" />
-     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link
-       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
-       rel="stylesheet"
-     />
-     <link rel="stylesheet" href="styles.css" />
-     <title>Responsive Travel website</title>
-   </head>
-   <body>
-     <nav>
-       <div class="nav__logo">ProCoder09<span></span></div>
-       <ul class="nav__links">
-         <li class="link"><a href="#">Home</a></li>
-         <li class="link"><a href="#">Destinations</a></li>
-         <li class="link"><a href="#">Pricing</a></li>
-         <li class="link"><a href="#">Reviews</a></li>
-       </ul>
-       <button class="btn">Contact Us</button>
-     </nav>
-     <header>
-       <div class="section__container header__container">
-         <div class="header__image">
-           <img src="header-1.jpg" alt="header" />
-           <img src="header-2.jpg" alt="header" />
-         </div>
-         <div class="header__content">
-           <div>
-             <p class="sub__header">Book Now</p>
-             <h1>The Smiling 😊<br />agent for travel</h1>
-             <p class="section__subtitle">
-               Make your travel more enjoyable with us. We are the best travel
-               agency and we are providing the best travel services for our
-               clients.
-             </p>
-             <div class="action__btns">
-               <button class="btn">Plan a Trip</button>
-               <div class="story">
-                 <div class="video__image">
-                   <img src="story.jpg" alt="story" />
-                   <span><i class="ri-play-fill"></i></span>
-                 </div>
-                 <span>Watch our story</span>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </header>
- 
-     <section class="section__container destination__container">
-       <div class="section__header">
-         <div>
-           <h2 class="section__title">Explore top destinations</h2>
-           <p class="section__subtitle">
-             Explore your suitable and dream places around the world. Here you
-             can find your right destination.
-           </p>
-         </div>
-         <div class="destination__nav">
-           <span><i class="ri-arrow-left-s-line"></i></span>
-           <span><i class="ri-arrow-right-s-line"></i></span>
-         </div>
-       </div>
-       <div class="destination__grid">
-         <div class="destination__card">
-           <img src="destination-1.jpg" alt="destination" />
-           <div class="destination__details">
-             <p class="destination__title">Banff</p>
-             <p class="destination__subtitle">Canada</p>
-           </div>
-         </div>
-         <div class="destination__card">
-           <img src="destination-2.jpg" alt="destination" />
-           <div class="destination__details">
-             <p class="destination__title">Machu Picchu</p>
-             <p class="destination__subtitle">Peru</p>
-           </div>
-         </div>
-         <div class="destination__card">
-           <img src="destination-3.jpg" alt="destination" />
-           <div class="destination__details">
-             <p class="destination__title">Lauterbrunnen</p>
-             <p class="destination__subtitle">Switzerland</p>
-           </div>
-         </div>
-         <div class="destination__card">
-           <img src="destination-4.jpg" alt="destination" />
-           <div class="destination__details">
-             <p class="destination__title">Zhangjiajie</p>
-             <p class="destination__subtitle">China</p>
-           </div>
-         </div>
-       </div>
-     </section>
- 
-     <section class="trip">
-       <div class="section__container trip__container">
-         <h2 class="section__title">Best trip package</h2>
-         <p class="section__subtitle">
-           Explore your suitable and dream places around the world. Here you can
-           find your right destination.
-         </p>
-         <div class="trip__grid">
-           <div class="trip__card">
-             <img src="trip-1.jpg" alt="trip" />
-             <div class="trip__details">
-               <p>Wasserwerk Frelberg, Germany</p>
-               <div class="rating"><i class="ri-star-fill"></i> 4.2</div>
-               <div class="booking__price">
-                 <div class="price"><span>From</span> $300</div>
-                 <button class="book__now">Book Now</button>
-               </div>
-             </div>
-           </div>
-           <div class="trip__card">
-             <img src="trip-2.jpg" alt="trip" />
-             <div class="trip__details">
-               <p>Patagonia, Argentina and Chile</p>
-               <div class="rating"><i class="ri-star-fill"></i> 4.5</div>
-               <div class="booking__price">
-                 <div class="price"><span>From</span> $450</div>
-                 <button class="book__now">Book Now</button>
-               </div>
-             </div>
-           </div>
-           <div class="trip__card">
-             <img src="trip-3.jpg" alt="trip" />
-             <div class="trip__details">
-               <p>The Dolomites, Italy</p>
-               <div class="rating"><i class="ri-star-fill"></i> 4.7</div>
-               <div class="booking__price">
-                 <div class="price"><span>From</span> $400</div>
-                 <button class="book__now">Book Now</button>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="view__all">
-           <button class="btn">View All</button>
-         </div>
-       </div>
-     </section>
- 
-     <section class="gallary">
-       <div class="section__container gallary__container">
-         <div class="image__gallary">
-           <div class="gallary__col">
-             <img src="gallery-1.jpg" alt="gallary" />
-           </div>
-           <div class="gallary__col">
-             <img src="gallery-2.jpg" alt="gallary" />
-             <img src="gallery-3.jpg" alt="gallary" />
-           </div>
-         </div>
-         <div class="gallary__content">
-           <div>
-             <h2 class="section__title">
-               Our trip gallary that will inspire you
-             </h2>
-             <p class="section__subtitle">
-               Explore your suitable and dream places around the world. Here you
-               can find your right destination.
-             </p>
-             <button class="btn">View All</button>
-           </div>
-         </div>
-       </div>
-     </section>
- 
-     <section class="subscribe">
-       <div class="section__container subscribe__container">
-         <div class="subscribe__content">
-           <h2 class="section__title">Subscribe to get special prize</h2>
-           <p class="section__subtitle">
-             Explore your suitable and dream places around the world. Here you
-             can find your right destination.
-           </p>
-         </div>
-         <div class="subscribe__form">
-           <form>
-             <input type="email" placeholder="Your email here" />
-             <button class="btn" type="submit">Send</button>
-           </form>
-         </div>
-       </div>
-     </section>
- 
-     <footer class="footer">
-       <div class="section__container footer__container">
-         <div class="footer__col">
-           <h3>Code Champion<span>.</span></h3>
-           <p>
-             Explore your suitable and dream places around the world. Here you
-             can find your right destination.
-           </p>
-         </div>
-         <div class="footer__col">
-           <h4>Support</h4>
-           <p>FAQs</p>
-           <p>Terms & Conditions</p>
-           <p>Privacy Policy</p>
-           <p>Contact Us</p>
-         </div>
-         <div class="footer__col">
-           <h4>Address</h4>
-           <p>
-             <span>Address:</span> 280 Wilson Street, Cima, California, 92323,
-             United States
-           </p>
-           <p><span>Email:</span> info@Code Champion.com</p>
-           <p><span>Phone:</span> +91 9876543210</p>
-         </div>
-       </div>
-       <div class="footer__bar">
-         Copyright © 2023 Web Design Mastery. All rights reserved.
-       </div>
-     </footer>
-   </body>
- </html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ko Ko Aung - Data Analyst</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f7fa;
+      color: #333;
+      scroll-behavior: smooth;
+    }
+    header {
+      background: linear-gradient(135deg, #00bcd4, #2196f3);
+      color: white;
+      padding: 4rem 1rem;
+      text-align: center;
+    }
+    .avatar {
+      width: 150px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      border: 4px solid white;
+    }
+    .section-title {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      font-weight: bold;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      transition: all 0.3s ease-in-out;
+    }
+    .prolink {
+      text-decoration: none;
+      color: #007bff;
+    }
+    .prolink:hover {
+      text-decoration: underline;
+    }
+    footer {
+      background-color: #222;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <img src="images/avatar.jpg" alt="Avatar" class="avatar" />
+    <h1>I am Ko Ko Aung, a Data Analyst</h1>
+    <p>Transforming data into meaningful insights with the power of computer science</p>
+    <a class="btn btn-light mt-3" href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Ko%20Ko%20Aung.pdf" target="_blank">Download CV</a>
+  </header>
+
+  <section class="container py-5" id="projects">
+    <div class="text-center mb-4">
+      <h2 class="section-title" data-aos="fade-up">Recent Work</h2>
+      <p data-aos="fade-up" data-aos-delay="100">Highlights of my data projects</p>
+    </div>
+    <div class="row g-4">
+      <div class="col-md-6" data-aos="zoom-in">
+        <div class="card shadow-sm">
+          <img src="images/thumbs/01.jpg" class="card-img-top" alt="Excel Project">
+          <div class="card-body">
+            <h5 class="card-title"><a class="prolink" href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Excel%20Project.xlsx" target="_blank">Excel Project <i class="fa-solid fa-up-right-from-square"></i></a></h5>
+            <p>Create a data analyst project using Excel</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6" data-aos="zoom-in" data-aos-delay="100">
+        <div class="card shadow-sm">
+          <img src="images/thumbs/02.jpg" class="card-img-top" alt="Covid SQL">
+          <div class="card-body">
+            <h5 class="card-title"><a class="prolink" href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" target="_blank">Covid Data Exploration <i class="fa-solid fa-up-right-from-square"></i></a></h5>
+            <p>Query real-world Covid data using SQL</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6" data-aos="zoom-in" data-aos-delay="200">
+        <div class="card shadow-sm">
+          <img src="images/thumbs/03.jpg" class="card-img-top" alt="Data Cleaning">
+          <div class="card-body">
+            <h5 class="card-title"><a class="prolink" href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" target="_blank">Data Cleaning <i class="fa-solid fa-up-right-from-square"></i></a></h5>
+            <p>Clean and analyze large housing datasets</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6" data-aos="zoom-in" data-aos-delay="300">
+        <div class="card shadow-sm">
+          <img src="images/thumbs/04.jpg" class="card-img-top" alt="Amazon Webscraping">
+          <div class="card-body">
+            <h5 class="card-title"><a class="prolink" href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank">Amazon Webscraping <i class="fa-solid fa-up-right-from-square"></i></a></h5>
+            <p>Scrape product data from Amazon eCommerce site</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="bg-light py-5" id="contact">
+    <div class="container">
+      <div class="text-center mb-4">
+        <h2 class="section-title" data-aos="fade-up">Get In Touch</h2>
+        <p data-aos="fade-up" data-aos-delay="100">I welcome your questions and feedback!</p>
+      </div>
+      <form id="contact-form" class="row g-3" data-aos="fade-up" action="mailto:kokoaung.dev@gmail.com" method="post" enctype="text/plain">
+        <div class="col-md-6">
+          <input type="text" class="form-control" placeholder="Your Name" name="name" required />
+        </div>
+        <div class="col-md-6">
+          <input type="email" class="form-control" placeholder="Your Email" name="email" required />
+        </div>
+        <div class="col-12">
+          <textarea class="form-control" rows="4" placeholder="Your Message" name="message" required></textarea>
+        </div>
+        <div class="col-12 text-center">
+          <button type="submit" class="btn btn-primary">Send Message</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <p>&copy; 2025 Ko Ko Aung. All rights reserved.</p>
+      <div class="mt-2">
+        <a href="https://www.linkedin.com/in/ko-ko-aung-dev" class="text-white mx-2" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/KoKoAungStar" class="text-white mx-2" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="mailto:kokoaung.dev@gmail.com" class="text-white mx-2"><i class="fas fa-envelope"></i></a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
+
+</html>
