--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <p class="animated-intro">Data Analyst | Creative Thinker | Insight Creator</p>
     <p class="animated-intro">Welcome to my digital portfolio! I transform raw data into compelling stories and actionable insights. Whether it’s building applications, cleaning massive datasets, or crafting SQL queries, I turn data into decisions.</p>
     <div class="cv-button">
-      <a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Ko%20Ko%20Aung.pdf" target="_blank"><i class="fas fa-download"></i> Download CV</a>
+      <a href="https://github.com/KoKoAungStar/Data-Analysis-Portfolio/blob/main/Ko_Ko_Aung.pdf" target="_blank"><i class="fas fa-download"></i> Download CV</a>
     </div>
   </header>
 
